# pico-timer

./: CMakeLists.txt  main.c  orientation.h  readme.md  ssd1306.c  ssd1306.h  ssd1306_font.h  xpm.c  xpm.h
img/: colon.xpm  gen  genall  num0.xpm  num1.xpm  num2.xpm  num3.xpm  num4.xpm  num5.xpm  num6.xpm  num7.xpm  num8.xpm  num9.xpm  space.xpm
